--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -27,6 +27,8 @@
     {% endif %}
 
     {% render 'meta-tags' %}
+    {{ 'shop-the-look.css' | asset_url | stylesheet_tag }}
+
 
     <script src="{{ 'constants.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'pubsub.js' | asset_url }}" defer="defer"></script>
@@ -372,5 +374,7 @@
     {%- if settings.cart_type == 'drawer' -%}
       <script src="{{ 'cart-drawer.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
+    {{ 'shop-the-look.js' | asset_url | script_tag }}
+
   </body>
 </html>
